Assets/style.css
html, body, .container-fluid {
  height: 100%;
  /* fill screen with background */
}

body {
  margin: 20px;
  /* space around page, not up against edge of window */
  font-weight: bolder !important;
  font-size: 16px !important;
}

p {
  font-size: 11.5px;
  color: white;
}


/* background image for the page */

.bgimg-1 {
  position: relative;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  /* Image from https://stock.adobe.com/search?load_type=search&native_visual_search=&similar_content_id=&is_recent_search=&search_type=usertyped&k=sunset&asset_id=265728175 */
  background-image: url("./clouds.jpg");
  height: 100%;
}

.jumbotron {
  padding: 20px;
}

#inputCity {
  width: 100%;
  /* so search window lines up with list of cities */
  border-radius: 4px;
  /* input for city search match style of list of previously searched cities */
  background-color: rgb(245, 217, 242);
  /* easier to read without background behind text */
}

#cityList {
  margin-top: 10px;
  /* space between city search & list of previously searched cities */
}

.list-group-item {
  background-color: rgb(245, 217, 242);
  /* easier to read without background behind text */
}

#currCityConditionsBox {
  border: solid 1px gray;
}

#currWeatherRow, #forecastHeader {
  /*  margin: 10px; */
  font-size: 25px;
}

#all5DayForecast {
  padding: 15px;
}

#currWeather {
  background-color: rgb(245, 217, 242);
  padding-bottom: 15px;
  padding-top: 15px;
  /* easier to read without background behind text */
}

#currWeatherIcon {
  border-radius: 4px;
  width: 50px;
  height: 50px;
}

#cityTemp, #cityHumid, #cityWind, #cityUV {
  height: 40px;
  padding: 10px 0;
}

#dataUV {
  margin: 5px;
  padding: 5px;
  background-color: red;
  color: white;
  border-radius: 4px;
}

.card {
  height: 200px;
  margin: 15px;
}

.card:first-child {
  margin-left: 0px;
}

.card-body {
  padding-left: 0;
}

.fore5img {
  width: 45px;
  height: 45px;
  margin-bottom: 10px;
}

#fore5date0, #fore5date1, #fore5date2, #fore5date3, #fore5date4 {
  font-size: 19px;
}

